--- a/index.html
+++ b/index.html
@@ -385,31 +385,31 @@ function IHereKeeCopy() {
     const DonToWarn = 3;
     const _0xf1 = atob('aHR0cHM6Ly9hcHB0Y3IuZ2l0aHViLmlvL3Bva2VjYXRjaGNhbGMvaW5kZXguaHRtbA==');
 
-    function showWarning() {
-        ForFirstWarn++;
-        if (ForFirstWarn > DonToWarn) {
-            window.location.href = _0xf1;
-            return;
-        }
+function NJWannaWarn() {
+    ForFirstWarn++;
+    if (ForFirstWarn > DonToWarn) {
+        window.location.href = _0xf1;
+        return;
+    }
 
-        const modal = document.createElement('div');
-        modal.id = 'ToocatchImWarn';
-        modal.style.cssText = `
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 30px 40px;
-            border-radius: 15px;
-            box-shadow: 0 10px 40px rgba(0,0,0,0.3);
-            z-index: 999999;
-            text-align: center;
-            font-family: Arial, sans-serif;
-            min-width: 300px;
-            animation: slideIn 0.3s ease-out;
-        `;
+    const modal = document.createElement('div');
+    modal.id = 'ToocatchImWarn';
+    modal.style.cssText = `
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        color: white;
+        padding: 30px 40px;
+        border-radius: 15px;
+        box-shadow: 0 10px 40px rgba(0,0,0,0.3);
+        z-index: 999999;
+        text-align: center;
+        font-family: Arial, sans-serif;
+        min-width: 300px;
+        animation: slideIn 0.3s ease-out;
+    `;
 
         modal.innerHTML = `
             <div style="
@@ -438,56 +438,56 @@ function IHereKeeCopy() {
             ">\u0e1b\u0e34\u0e14</button>
         `;
 
-        const style = document.createElement('style');
-        style.textContent = `
-            @keyframes slideIn {
-                from {
-                    opacity: 0;
-                    transform: translate(-50%, -60%);
-                }
-                to {
-                    opacity: 1;
-                    transform: translate(-50%, -50%);
-                }
+    const style = document.createElement('style');
+    style.textContent = `
+        @keyframes slideIn {
+            from {
+                opacity: 0;
+                transform: translate(-50%, -60%);
             }
-            #closeWarn:hover {
-                transform: scale(1.05);
-                box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+            to {
+                opacity: 1;
+                transform: translate(-50%, -50%);
             }
-        `;
-        document.head.appendChild(style);
+        }
+        #closeWarn:hover {
+            transform: scale(1.05);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
+        }
+    `;
+    document.head.appendChild(style);
 
-        const backdrop = document.createElement('div');
-        backdrop.id = 'warningBackdrop';
-        backdrop.style.cssText = `
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0,0,0,0.5);
-            z-index: 999998;
-        `;
+    const backdrop = document.createElement('div');
+    backdrop.id = 'warningBackdrop';
+    backdrop.style.cssText = `
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.5);
+        z-index: 999998;
+    `;
 
-        document.body.appendChild(backdrop);
-        document.body.appendChild(modal);
+    document.body.appendChild(backdrop);
+    document.body.appendChild(modal);
 
-        document.getElementById('closeWarn').onclick = function() {
-            modal.remove();
-            backdrop.remove();
-        };
-
-        setTimeout(() => {
-            if (document.getElementById('ToocatchImWarn')) {
-                modal.remove();
-                backdrop.remove();
-            }
-        }, 10000);
-    }
+    document.getElementById('closeWarn').onclick = function() {
+        modal.remove();
+        backdrop.remove();
+    };
 
     setTimeout(() => {
-        showWarning();
-        setInterval(showWarning, 10000);
+        if (document.getElementById('ToocatchImWarn')) {
+            modal.remove();
+            backdrop.remove();
+        }
+    }, 10000);
+}
+
+    setTimeout(() => {
+        NJWannaWarn();
+        setInterval(NJWannaWarn, 10000);
     }, 5000);
 }
   
@@ -842,4 +842,5 @@ document.addEventListener('DOMContentLoaded', async () => {
 </script>
 </body>
 </html>
+
 
